Added working timeline component and styling for the elemnts.

--- a/enriquekesslerm.com/src/components/timeline.module.css
+++ b/enriquekesslerm.com/src/components/timeline.module.css
@@ -1,93 +1,49 @@
-.box{
-    margin:0 10%;
-    height: 630px;
-    overflow: hidden;
-    padding: 10px 0 40px 60px
+ul, li{
+  list-style: none;
+  padding: 0;
 }
 
-.box ul{
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    position: relative;
-    transition: all 0.5s linear;
-    top:0
+.wrapper{
+  padding: 2rem;
+  border-radius: 15px;
 }
 
-.box ul:last-of-type{top:80px}
-
-.box ul:before{
-    content: "";
-    display: block;
-    width: 0;
-    height: 100%;
-    border:1px dashed #fff;
-    position: absolute;
-    top:0;
-    left:30px
+.sessions{
+  /* margin-top: 2rem; */
+  border-radius: 12px;
+  position: relative;
 }
 
-.box ul li{
-    margin: 20px 60px 60px;
-    position: relative;
-    padding: 10px 20px;
-    background:rgba(255, 255, 255, 0.3);
-    color:#fff;
-    border-radius: 10px;
-    line-height: 20px;
-    width: 35%
-}
-
-
-.box ul li > span{
-    content: "";
-    display: block;
-    width: 0;
-    height: 100%;
-    border:1px solid #fff;
-    position: absolute;
-    top:0;
-    left:-30px
-}
-
-.box ul li > span:before,.box ul li > span:after{
-    content: "";
-    display: block;
-    width: 10px;
-    height: 10px;
+.timelineElem {
+  padding-bottom: 1.5rem;
+  border-left: 1px solid #abaaed;
+  position: relative;
+  padding-left: 20px;
+  margin-left: 10px;
+  &:last-child{
+    border: 0px;
+    padding-bottom: 0;
+  }
+  &:before{
+    content: '';
+    width: 15px;
+    height: 15px;
+    background: white;
+    border: 1px solid #4e5ed3;
+    box-shadow: 3px 3px 0px #bab5f8;
+    box-shadow: 3px 3px 0px #bab5f8;
     border-radius: 50%;
-    background:#ff6d6d;
-    border:2px solid #fff;
     position: absolute;
-    left:-7.5px
+    left: -10px;
+    top: 0px;
+  }
 }
 
-.box ul li > span:before{top:-10px}
-.box ul li > span:after{top:95%}
-
-.box .title{
-    text-transform: uppercase;
-    font-weight: 700;
-    margin-bottom: 5px
+.time{
+  font-weight: 500;
 }
 
-.box .info:first-letter{text-transform: capitalize;line-height: 1.7}
-
-.box .name{
-    margin-top: 10px;
-    text-transform: capitalize;
-    font-style: italic;
-    text-align: right;
-    margin-right: 20px
+.info {
+  line-height: 1.5;
+  margin-top:0.4rem;
 }
-
-
-.box .time span{
-    position: absolute;
-    left: -100px;
-    color:#fff;
-    font-size:80%;
-    font-weight: bold;
-}
-.box .time span:first-child{top:-16px}
-.box .time span:last-child{top:94%}
