--- a/src/components/timeline.module.css
+++ b/src/components/timeline.module.css
@@ -15,7 +15,7 @@ ul, li{
 }
 
 .timelineElem {
-  padding-bottom: 1.5rem;
+  /* padding-bottom: 1.5rem; */
   border-left: 1px solid #abaaed;
   position: relative;
   padding-left: 20px;
